# sdkwork-local-router

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  config.example.toml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork.app.config.json  sdkwork.workflow.json
.github/workflows/: package.yml
apps/: README.md
apps/sdkwork-local-router-pc/: README.md
apps/sdkwork-modelkit-pc/: AGENTS.md  README.md  package-lock.json  package.json  pnpm-workspace.yaml  sdkwork.app.config.json  server.ts  tsconfig.json  vite.config.ts  zh_in_en.txt
apps/sdkwork-modelkit-pc/docs/: INDEX.yaml
apps/sdkwork-modelkit-pc/docs/architecture/tech/: TECH_ARCHITECTURE.md
apps/sdkwork-modelkit-pc/docs/product/prd/: PRD.md
apps/sdkwork-modelkit-pc/etc/: README.md  sdkwork.deployment.config.json
apps/sdkwork-modelkit-pc/mocks/node-domexception/specs/: README.md  component.spec.json
apps/sdkwork-modelkit-pc/sdks/sdkwork-modelkit-sdk-typescript/: package.json
apps/sdkwork-modelkit-pc/specs/: README.md  component.spec.json  dependency.composition.json
apps/sdkwork-modelkit-pc/src/: index.css  main.tsx
crates/sdkwork-api-local-router-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-local-router-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-local-router-assembly/src/: bootstrap.rs  generated.rs  lib.rs  runtime.rs
crates/sdkwork-api-local-router-standalone-gateway/: Cargo.toml
crates/sdkwork-api-local-router-standalone-gateway/specs/: component.spec.json
crates/sdkwork-api-local-router-standalone-gateway/src/: main.rs
crates/sdkwork-local-router-database-host/: Cargo.toml
crates/sdkwork-local-router-database-host/src/: lib.rs
crates/sdkwork-lr-config/: Cargo.toml  README.md
crates/sdkwork-lr-config/specs/: README.md  component.spec.json
crates/sdkwork-lr-config/src/: lib.rs
crates/sdkwork-lr-core/: Cargo.toml  README.md
crates/sdkwork-lr-core/specs/: README.md  component.spec.json
crates/sdkwork-lr-core/src/: account_pool.rs  health.rs  interceptor.rs  invocation.rs  lib.rs
crates/sdkwork-lr-observability/: Cargo.toml  README.md
crates/sdkwork-lr-observability/specs/: README.md  component.spec.json
crates/sdkwork-lr-observability/src/: lib.rs  metrics.rs
crates/sdkwork-lr-plugin/: Cargo.toml  README.md
crates/sdkwork-lr-plugin/specs/: README.md  component.spec.json
crates/sdkwork-lr-plugin/src/: lib.rs
crates/sdkwork-lr-proxy/: Cargo.toml  README.md
crates/sdkwork-lr-proxy/specs/: README.md  component.spec.json
crates/sdkwork-lr-proxy/src/: lib.rs
crates/sdkwork-lr-store/: Cargo.toml  README.md
crates/sdkwork-lr-store/migrations/postgres/: 20260522000001_init.sql  20260523000001_add_retry_config.sql  20260604000001_local_router_user_isolation.sql  20260604000002_add_invocation_metadata.sql  20260604000003_add_upstream_auth_scheme.sql  20260604000004_add_model_route_mappings_table.sql  20260605000001_use_runtime_snowflake_ids.sql  DEPRECATED.md
crates/sdkwork-lr-store/migrations/sqlite/: 20260522000001_init.sql  20260523000001_add_retry_config.sql  20260604000002_add_invocation_metadata.sql  20260604000003_add_upstream_auth_scheme.sql  20260604000004_add_model_route_mappings_table.sql  20260605000001_use_runtime_snowflake_ids.sql
crates/sdkwork-lr-store/specs/: README.md  component.spec.json
crates/sdkwork-lr-store/src/: bootstrap.rs  crypto.rs  error.rs  id.rs  lib.rs  models.rs  pool.rs
crates/sdkwork-lr-transform/: Cargo.toml  README.md
crates/sdkwork-lr-transform/specs/: README.md  component.spec.json
crates/sdkwork-lr-transform/src/: claude_to_openai.rs  gemini_to_openai.rs  lib.rs  openai_to_claude.rs  openai_to_gemini.rs  plugins.rs  streaming.rs
crates/sdkwork-routes-local-router-app-api/: Cargo.toml
crates/sdkwork-routes-local-router-app-api/specs/: component.spec.json
crates/sdkwork-routes-local-router-app-api/src/: lib.rs
crates/sdkwork-routes-local-router-backend-api/: Cargo.toml
crates/sdkwork-routes-local-router-backend-api/specs/: component.spec.json
crates/sdkwork-routes-local-router-backend-api/src/: lib.rs
crates/sdkwork-routes-local-router-open-api/: Cargo.toml
crates/sdkwork-routes-local-router-open-api/specs/: component.spec.json
crates/sdkwork-routes-local-router-open-api/src/: lib.rs  passthrough.rs
crates/sdkwork-routes-local-router-support/: Cargo.toml
crates/sdkwork-routes-local-router-support/specs/: README.md  component.spec.json
crates/sdkwork-routes-local-router-support/src/: auth.rs  integration.rs  lib.rs  rate_limit.rs  state.rs  upstream_auth.rs
database/: README.md  database.manifest.json
database/contract/: prefix-registry.json  schema.yaml  table-registry.json
database/ddl/baseline/postgres/: 0001_localrouter_baseline.sql  0001_localrouter_legacy_baseline.sql
database/ddl/baseline/sqlite/: 0001_localrouter_baseline.sql  0001_localrouter_legacy_baseline.sql
database/seeds/common/: 001_bootstrap.sql
docs/: INDEX.yaml  README.md  plugin-compatibility.md
docs/architecture/tech/: TECH-plugin-compatibility.md  TECH_ARCHITECTURE.md
docs/product/prd/: PRD.md
etc/: README.md  sdkwork.deployment.config.json
etc/topology/: cloud.development.env  cloud.production.env  standalone.development.env  standalone.production.env
scripts/: clean.mjs
sdks/_route-manifests/app-api/: sdkwork-routes-local-router-app-api.route-manifest.json
sdks/_route-manifests/backend-api/: sdkwork-routes-local-router-backend-api.route-manifest.json
sdks/_route-manifests/open-api/: sdkwork-routes-local-router-open-api.route-manifest.json
services/sdkwork-local-router/: Cargo.toml  README.md
services/sdkwork-local-router/specs/: README.md  component.spec.json
services/sdkwork-local-router/src/: api_groups.rs  auth.rs  dashboard.rs  integration.rs  lib.rs  main.rs  passthrough.rs  rate_limit.rs  router.rs  server.rs  streaming.rs
specs/: README.md  component.spec.json  topology.spec.json
tools/: materialize_localrouter_database_contract.mjs
(+4 files in other folders)
