[workspace]
members = [
    "crates/sdkwork-lr-config",
    "crates/sdkwork-lr-core",
    "crates/sdkwork-lr-proxy",
    "crates/sdkwork-lr-transform",
    "crates/sdkwork-lr-store",
    "crates/sdkwork-lr-observability",
    "services/sdkwork-local-router",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
bytes = "1.11"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
futures-core = "0.3"
futures-util = "0.3"
http-body-util = "0.1"
hyper = { version = "1.9", features = ["client", "http1"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "ring", "webpki-tokio"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
parking_lot = "0.12"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "postgres", "derive", "migrate"] }
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "fs", "io-util"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"
