[workspace]
members = [
    "crates/sdkwork-api-local-router-standalone-gateway",
    "crates/sdkwork-api-local-router-assembly",
    "crates/sdkwork-routes-local-router-support",
    "crates/sdkwork-routes-local-router-open-api",
    "crates/sdkwork-routes-local-router-app-api",
    "crates/sdkwork-routes-local-router-backend-api",
    "crates/sdkwork-lr-config",
    "crates/sdkwork-lr-core",
    "crates/sdkwork-local-router-database-host",
    "crates/sdkwork-lr-plugin",
    "crates/sdkwork-lr-proxy",
    "crates/sdkwork-lr-transform",
    "crates/sdkwork-lr-store",
    "crates/sdkwork-lr-observability",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
sdkwork-database-id = { path = "../sdkwork-database/crates/sdkwork-database-id" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle" }
sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config" }
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
bytes = "1.11"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
futures-core = "0.3"
futures-util = "0.3"
http-body-util = "0.1"
hyper = { version = "1.9", features = ["client", "http1"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "ring", "webpki-tokio"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
parking_lot = "0.12"
regex = "1"
sdkwork-models = { git = "https://github.com/Sdkwork-Cloud/sdkwork-models.git" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "postgres", "derive", "migrate", "macros"] }
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "fs", "io-util", "signal"] }
toml = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"

# SDKWork workspace members - declared once at workspace root
sdkwork-lr-config = { path = "crates/sdkwork-lr-config" }
sdkwork-lr-core = { path = "crates/sdkwork-lr-core" }
sdkwork-lr-plugin = { path = "crates/sdkwork-lr-plugin" }
sdkwork-lr-proxy = { path = "crates/sdkwork-lr-proxy" }
sdkwork-lr-transform = { path = "crates/sdkwork-lr-transform" }
sdkwork-lr-observability = { path = "crates/sdkwork-lr-observability" }
sdkwork-lr-store = { path = "crates/sdkwork-lr-store" }
sdkwork-routes-local-router-support = { path = "crates/sdkwork-routes-local-router-support" }
sdkwork-routes-local-router-open-api = { path = "crates/sdkwork-routes-local-router-open-api" }
sdkwork-routes-local-router-app-api = { path = "crates/sdkwork-routes-local-router-app-api" }
sdkwork-routes-local-router-backend-api = { path = "crates/sdkwork-routes-local-router-backend-api" }
sdkwork-api-local-router-assembly = { path = "crates/sdkwork-api-local-router-assembly" }
sdkwork-web-bootstrap = { path = "../sdkwork-web-framework/crates/sdkwork-web-bootstrap" }
