[package]
name = "sdkwork-api-local-router-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-local-router application HTTP plane."

[lib]
name = "sdkwork_api_local_router_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
