[package]
name = "sdkwork-api-local-router-standalone-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork-api-local-router-assembly.workspace = true
sdkwork-web-bootstrap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
