[package]
name = "sdkwork-local-router-database-host"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SDKWork Local Router database lifecycle bootstrap."

[lib]
name = "sdkwork_local_router_database_host"
path = "src/lib.rs"

[dependencies]
dotenvy = "0.15"
sdkwork-database-config.workspace = true
sdkwork-database-lifecycle.workspace = true
sdkwork-database-spi.workspace = true
sdkwork-database-sqlx.workspace = true
