[package]
name = "sdkwork-lr-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
regex.workspace = true
tracing.workspace = true
sdkwork-lr-core.workspace = true
sdkwork-lr-plugin.workspace = true
