[package]
name = "sdkwork-lr-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytes.workspace = true
parking_lot.workspace = true
rand = "0.8"
regex.workspace = true
sdkwork-lr-observability.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true