[package]
name = "sdkwork-lr-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes-gcm = "0.10"
anyhow.workspace = true
base64 = "0.22"
chrono.workspace = true
hkdf = "0.12"
rand = "0.8"
sdkwork-id-core = { path = "../../../sdkwork-id/crates/sdkwork-id-core" }
sdkwork-database-config = { path = "../../../sdkwork-database/crates/sdkwork-database-config" }
sdkwork-database-sqlx = { path = "../../../sdkwork-database/crates/sdkwork-database-sqlx" }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
