[package]
name = "sdkwork-lr-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sdkwork-local-router-database-host = { path = "../sdkwork-local-router-database-host" }
sdkwork-database-config = { workspace = true }
sdkwork-database-lifecycle = { workspace = true }
sdkwork-database-spi = { workspace = true }
sdkwork-database-sqlx = { workspace = true }
aes-gcm = "0.10"
anyhow.workspace = true
base64 = "0.22"
chrono.workspace = true
hkdf = "0.12"
rand = "0.8"
sdkwork-database-id = { workspace = true }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
