[package]
name = "sdkwork-lr-transform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sdkwork-lr-core = { path = "../sdkwork-lr-core" }
sdkwork-lr-plugin = { path = "../sdkwork-lr-plugin" }
tracing.workspace = true
uuid.workspace = true
