[package]
name = "sdkwork-routes-local-router-app-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local Router user-facing application API routes."

[lib]
name = "sdkwork_routes_local_router_app_api"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
sdkwork-routes-local-router-support = { path = "../sdkwork-routes-local-router-support" }
