[package]
name = "sdkwork-routes-local-router-backend-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local Router administration backend API routes."

[lib]
name = "sdkwork_routes_local_router_backend_api"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
sdkwork-routes-local-router-support = { path = "../sdkwork-routes-local-router-support" }
