[package]
name = "sdkwork-routes-local-router-support"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared state, middleware, and handlers for Local Router HTTP surfaces."

[lib]
name = "sdkwork_routes_local_router_support"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64 = "0.22"
bytes.workspace = true
dashmap.workspace = true
futures-core.workspace = true
futures-util.workspace = true
http-body-util.workspace = true
hyper.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
regex.workspace = true
sdkwork-lr-config.workspace = true
sdkwork-lr-core.workspace = true
sdkwork-lr-plugin.workspace = true
sdkwork-lr-proxy.workspace = true
sdkwork-lr-transform.workspace = true
sdkwork-lr-store = { path = "../sdkwork-lr-store" }
sdkwork-lr-observability.workspace = true
sdkwork-models.workspace = true
sdkwork-web-axum.workspace = true
sdkwork-web-core.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
urlencoding.workspace = true
uuid.workspace = true

[dev-dependencies]
tower.workspace = true
