[package]
name = "sdkwork-local-router"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lr"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64 = "0.22"
bytes.workspace = true
dashmap.workspace = true
futures-core.workspace = true
futures-util.workspace = true
http-body-util.workspace = true
hyper.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
regex.workspace = true
sdkwork-lr-config = { path = "../../crates/sdkwork-lr-config" }
sdkwork-lr-core = { path = "../../crates/sdkwork-lr-core" }
sdkwork-lr-plugin = { path = "../../crates/sdkwork-lr-plugin" }
sdkwork-lr-proxy = { path = "../../crates/sdkwork-lr-proxy" }
sdkwork-lr-transform = { path = "../../crates/sdkwork-lr-transform" }
sdkwork-lr-store = { path = "../../crates/sdkwork-lr-store" }
sdkwork-lr-observability = { path = "../../crates/sdkwork-lr-observability" }
sdkwork-models.workspace = true
sdkwork-web-axum.workspace = true
sdkwork-web-core.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
urlencoding.workspace = true
uuid.workspace = true

[dev-dependencies]
tower.workspace = true
